--- a/public/css/less/style.less
+++ b/public/css/less/style.less
@@ -383,6 +383,7 @@ h1, h2, h3, h4, h5, h6 { .reset; }
     position: absolute;
     top: 50%;
     left: 50%;
+    width: 200px;
     z-index: 2;
     padding: 20px;
     color: #fff;
