--- a/public/css/less/style.less
+++ b/public/css/less/style.less
@@ -269,6 +269,12 @@ h1, h2, h3, h4, h5, h6 { .reset; }
     }
   }
 
+  .item_list--counters {
+    .name {
+      width: ~"calc(100% - 140px);";
+    }
+  }
+
   .flex_list {
     width: 100%;
     margin-top: 7px;
@@ -280,7 +286,6 @@ h1, h2, h3, h4, h5, h6 { .reset; }
   .flex_list--equiped {
     .grid_3,
     .label{ background-color: #616161; }
-    
   }
 }
 .c-hero_sheet--dead {
