--- a/public/templates/dir_layer_roll.html
+++ b/public/templates/dir_layer_roll.html
@@ -8,7 +8,7 @@
         <span ng-if="hero.SelectedWeaponOffHand != '--'">OH: {{hero.atkStrOH}}<br /></span>
         {{hero.defStr}}
       </div>
-      <h2 class="wound_title">Add/remove wounds W({{hero.wounds}}) L({{hero.life}})</h2>
+      <h2 class="wound_title">Add/remove wounds<br />W({{hero.wounds}}) L({{hero.life}})</h2>
       <div class="btn-group">
           <button type="button" class="btn btn-success" ng-click="remWound();">-</button>
           <button type="button" class="btn btn-danger" ng-click="addWound();">+</button>
