--- a/public/templates/dir_hero_sheet_ctrll.html
+++ b/public/templates/dir_hero_sheet_ctrll.html
@@ -19,7 +19,7 @@
           <input type="text" class="form-control form-control--big" ng-model="hero.epicName" placeholder="Hero Epic Name"/>
         </div>
         <div class="label">
-          <input type="text" class="form-control form-control--big" ng-model="hero.conditionEffect" placeholder="Satus/Condition"/>
+          <input type="text" class="form-control form-control--big" ng-model="hero.conditionEffect" placeholder="Status/Condition"/>
         </div>
       </div>
 
