--- a/public/css/less/style.less
+++ b/public/css/less/style.less
@@ -232,6 +232,12 @@ h1, h2, h3, h4, h5, h6 { .reset; }
     .form-control--big {
       height: 30px;
     }
+    .form-control--textarea { 
+      height: 80px; 
+      padding: 5px;
+      text-align: left !important;
+      .boxsizing;
+    }
     input[type="checkbox"] {
       width: 100%;
       height: 100%;
