add gold for hero

--- a/public/templates/dir_hero_sheet_ctrll.html
+++ b/public/templates/dir_hero_sheet_ctrll.html
@@ -58,7 +58,8 @@
           <h1 class="subtitle">Abilities</h1>
           <div class="label">
             {{hero.heroDataTbl.abilities}} {{hero.heroDataTbl.equipment}}<br />
-            Def: {{hero.heroDataTbl.def}} | Atk: {{hero.heroDataTbl.atk}}
+            Def: {{hero.heroDataTbl.def}} | Atk: {{hero.heroDataTbl.atk}}<br />
+            Gold: {{hero.heroDataTbl.gold}}
           </div>
       </div>
 
