add analytics event

--- a/public/templates/dir_hero_sheet_ctrll.html
+++ b/public/templates/dir_hero_sheet_ctrll.html
@@ -93,7 +93,7 @@
         <h1 class="subtitle">Expert Skills</h1>
         <div class="item_list">
           <div class="item cf" ng-repeat="item in hero.expertSkills track by item.id">
-            <div class="name">{{item.name}}</div>
+            <div class="name" ng-click="addLayerItemInfo(item);">{{item.name}}</div>
             <div class="ctrl">
               <button type="button" class="btn btn-danger" ng-click="removeItem('expertSkills', $index);">X</button>
             </div>
