add service worker

--- a/public/templates/dir_hero_sheet_ctrll.html
+++ b/public/templates/dir_hero_sheet_ctrll.html
@@ -6,7 +6,7 @@
       <!-- WILL DISPLAY ON MOBILE -->
       <div class="c-fixed_info" dir-Top-Info>
         <div class="column">
-          <i class="fas fa-male"></i> {{hero.class}} lvl{{hero.level}}
+          <i class="fas fa-male"></i> {{hero.class}} L({{hero.level}})
         </div>
         <div class="column">
             <i class="fas fa-heart"></i> {{hero.life}}
