add service worker

--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -61,7 +61,7 @@
 
         <div class="text mt_20">
           This module is in developmen, ui will change with future versions.<br>
-          Beta version 0.0.1
+          Beta version 0.0.1 (JS_version_{{JS_VERSION}})
         </div>
 
       </div>
