--- a/public/css/less/style.less
+++ b/public/css/less/style.less
@@ -279,8 +279,9 @@ h1, h2, h3, h4, h5, h6 { .reset; }
       }
     }
     .image {
-      width: 55px;
+      width: 40px;
       float: left;
+      margin-top: 5px;
       margin-right: 15px;
       img {
         width: 100%;
